# test-zip-extract-repository

./: docker-services.yml  index.html  invenio.cfg  last-updated.txt  pyproject.toml
.github/workflows/: test.yaml
invenio-testrig-2026-02-16-19-54-59/: data.json
invenio-testrig-2026-02-16-20-21-22/: data.json
repository-with-zip-support-2026-02-16-20-52-56/: data.json  index.html  warnings.html  warnings.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-access/: original_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-accounts/: original_status.json  patched_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-administration/: patched_freeze.txt
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-app/: original_status.json  patched_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-audit-logs/: patched_freeze.txt
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-banners/: original_freeze.txt
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-cache/: original_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-celery/: original_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-checks/: original_freeze.txt  patched_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-cli/: original_freeze.txt
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-collections/: patched_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-communities/: patched_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-db/: patched_status.json
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-files-rest/: original_freeze.txt
repository-with-zip-support-2026-02-16-20-52-56/artifacts/invenio-formatter/: original_freeze.txt
repository-with-zip-support-2026-02-16-21-18-03/: data.json  index.html  warnings.html  warnings.json
repository-with-zip-support-2026-02-16-21-42-13/: data.json  index.html  warnings.html  warnings.json
repository-with-zip-support-2026-02-17-07-32-26/: data.json  index.html  warnings.html  warnings.json
repository-with-zip-support-2026-02-17-08-03-35/: data.json  index.html  warnings.html  warnings.json
repository-with-zip-support-2026-02-17-09-34-29/: data.json  index.html  warnings.html  warnings.json
repository-with-zip-support-2026-02-17-09-58-30/: data.json  index.html  warnings.html  warnings.json
repository-with-zip-support-2026-02-17-11-39-05/: data.json  index.html  warnings.html  warnings.json
repository-with-zip-support-2026-02-17-12-36-29/: data.json  index.html  warnings.html  warnings.json
zenodo-rdm-verification-with-zip-support-2026-02-16-19-15-57/: index.html  warnings.html
(+500 files in other folders)
