[project]
name = "latest-build-instance"
description = "latest build for invenioRDM"
version = "13.0.1"
requires-python = ">= 3.12"

dependencies = [
  "invenio-app-rdm[opensearch2,s3]~=14.0.0b3.dev0",
  "python-dotenv>=0.21.0",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  "latest-build", # this is not needed but kept for reference
  "invenio-cli",
  "apispec[marshmallow,yaml]>=6.8.3",
  "apispec-webframeworks>=1.2.0",
  "invenio-rdm-records>=22.0.0,<23.0.0",
  "invenio-records-resources>=8.0.0,<9.0.0",

]

[tool.uv.sources]
latest_build = { workspace = true }
invenio-app-rdm = { path = "/home/senyaaa/Work/invenio-app-rdm", editable=true }
invenio-rdm-records = { path = "/home/senyaaa/Work/invenio-rdm-records", editable=true }
invenio-records-resources = { path = "/home/senyaaa/Work/invenio-records-resources", editable=true}

[tool.uv.workspace]
members = [
  "site",
]

[dependency-groups]
dev = [
    "flask-debugtoolbar>=0.16.0",
    "pdbpp>=0.11.7",
    "pytest-invenio>=3.0.0,<4.0.0",
    "ruff>=0.13.0",
]

[project.optional-dependencies]
sentry = [
    "sentry-sdk>=1.45,<2.0.0",
]
tests = [
    "pytest-invenio>=3.0.0,<4.0.0",
]

