[project]
name = "latest-build-instance"
description = "latest build for invenioRDM"
version = "13.0.1"
requires-python = ">= 3.12"

dependencies = [
  "invenio-app-rdm[opensearch2,s3]~=14.0.0b5.dev3",
  "python-dotenv>=0.21.0",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  "latest-build", # this is not needed but kept for reference
  "invenio-cli",
  "apispec[marshmallow,yaml]>=6.8.3",
  "apispec-webframeworks>=1.2.0",
  "invenio-rdm-records",          # needed because of the patches below
  "invenio-records-resources",    # needed because of the patches below
  "invenio-previewer",            # needed because of the patches below
]

[tool.uv.sources]
latest_build = { workspace = true }
invenio-app-rdm = { git = "https://github.com/oarepo/invenio-app-rdm", branch = "contribution-zip-previewer-ui"}
invenio-rdm-records = { git = "https://github.com/oarepo/invenio-rdm-records", branch = "contribution-zip-extractors-processors"}
invenio-records-resources = { git = "https://github.com/oarepo/invenio-records-resources", branch = "contribution-container-extractors"}
invenio-previewer = { git = "https://github.com/oarepo/invenio-previewer", branch = "contribution-container-previewers"}

[tool.uv.workspace]
members = [
  "site",
]

[dependency-groups]
dev = [
    "flask-debugtoolbar>=0.16.0",
    "pdbpp>=0.11.7",
    "pytest-invenio>=3.0.0,<4.0.0",
    "ruff>=0.13.0",
]

[project.optional-dependencies]
sentry = [
    "sentry-sdk>=1.45,<2.0.0",
]
tests = [
    "pytest-invenio>=3.0.0,<4.0.0",
]

